# quantum-halftoning

./: .gitignore  QHVector.hs  QuantumHalftoning.hs  README.md  quantum-halftone  quantum-halftoning.cabal
haskell/: README.md  quantum-halftoning.cabal
haskell/src/exe/: Main.hs
haskell/src/lib/Graphics/: QuantumHalftoning.hs
haskell/src/lib/Graphics/QuantumHalftoning/: CLI.hs  Image.hs  ImageFiles.hs  Mutable.hs  MutualInformation.hs  Pixels.hs  Random.hs  Util.hs
haskell/src/lib/Graphics/QuantumHalftoning/CLI/: FilePattern.hs
src/exe/: Main.hs
src/lib/Graphics/: QuantumHalftoning.hs
src/lib/Graphics/QuantumHalftoning/: CLI.hs  Canvas.hs  Images.hs  ProbabilityDistributions.hs
