name:                quantum-halftoning
version:             0.0.0.0
synopsis:            Halftoning via quantum mechanics
description:         Please see README.md
homepage:            https://github.com/spectordon/quantum-halftoning#readme
license:             BSD3
license-file:        LICENSE
author:              Antal Spector-Zabusky
maintainer:          antal.b.sz@gmail.com
copyright:           Copyright: (c) 2017 Antal Spector-Zabusky
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/spectordon/quantum-halftoning/haskell

library
  exposed-modules:     Graphics.QuantumHalftoning.Util
                     , Graphics.QuantumHalftoning.Pixels
                     , Graphics.QuantumHalftoning.Images
                     , Graphics.QuantumHalftoning.Canvas
                     , Graphics.QuantumHalftoning.ProbabilityDistributions
                     , Graphics.QuantumHalftoning
                     , Graphics.QuantumHalftoning.CLI.FilePattern
                     , Graphics.QuantumHalftoning.CLI
  
  build-depends:       base                 >= 4.7 && < 5
                     , MonadRandom          ==0.4.*
                     , primitive            ==0.6.*
                     , vector               ==0.11.*
                     , JuicyPixels          ==3.2.*
                     , megaparsec           ==5.0.*
                     , optparse-applicative ==0.12.*
  
  other-extensions:    DefaultSignatures, TypeApplications, TypeFamilies
                     , TypeSynonymInstances, ScopedTypeVariables
                     , RoleAnnotations, GADTs, RankNTypes, RecordWildCards
                     , LambdaCase, UnicodeSyntax
  
  default-language:    Haskell2010
  hs-source-dirs:      src/lib
  ghc-options:         -Wall -Wcompat -fno-warn-name-shadowing -O2

executable quantum-halftone
  main-is:             Main.hs
  build-depends:       base, quantum-halftoning
  default-language:    Haskell2010
  hs-source-dirs:      src/exe
  ghc-options:         -Wall -Wcompat -fno-warn-name-shadowing
                       -O2 -threaded -rtsopts -with-rtsopts=-N
