name:                quantum-halftoning
version:             0.0.0.0
synopsis:            Halftoning via quantum mechanics
description:         Please see README.md
homepage:            https://github.com/spectordon/quantum-halftoning#readme
license:             BSD3
license-file:        LICENSE
author:              Antal Spector-Zabusky
maintainer:          antal.b.sz@gmail.com
copyright:           Copyright: (c) 2017 Antal Spector-Zabusky
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/spectordon/quantum-halftoning/haskell

library
  exposed-modules:     Graphics.QuantumHalftoning
  
  build-depends:       base        >= 4.7 && < 5
                     , mtl         ==2.2.*
                     , random      ==1.1.*
                     , vector      ==0.11.*
                     , split       ==0.2.*
                     , JuicyPixels ==3.2.*
                     , gloss       ==1.10.*
  
  other-extensions:    TypeSynonymInstances, TypeFamilies, RecordWildCards
                     , LambdaCase, UnicodeSyntax
  
  default-language:    Haskell2010
  hs-source-dirs:      src/lib
  ghc-options:         -Wall -fno-warn-name-shadowing -O2

executable quantum-halftoning
  main-is:             Main.hs
  build-depends:       base, quantum-halftoning
  default-language:    Haskell2010
  hs-source-dirs:      src/exe
  ghc-options:         -Wall -fno-warn-name-shadowing
                       -O2 -threaded -rtsopts -with-rtsopts=-N
